--- a/blackboard.css
+++ b/blackboard.css
@@ -1,1 +1,15 @@
-/* CSS declarations go here */
+body {
+	margin: 0;
+	overflow: hidden;
+}
+
+#board {
+	width: 100%;
+	height: 100%;
+}
+
+#reset {
+	position: fixed;
+	bottom: 1%;
+	left: 1%;
+}
